force-app/main/default/objects/FEC_Process_Action__c/FEC_Process_Action__c.object-meta.xml
<CustomObject>
    <description>Là chức năng của Business Configuration Tools – module Process Action tại FEC, dùng để hướng dẫn IT SO quản lý luồng xử lý nghiệp vụ: cấu hình, kích hoạt hoặc vô hiệu hóa các Process Action khi cần.</description>
    <label>Process Action</label>
    <nameField>
        <label>Process Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>