force-app/main/default/objects/FEC_Process_Action__c/fields/FEC_Linked_Case__c.field-meta.xml
<CustomField>
    <fullName>FEC_Linked_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Process Actions History</relationshipLabel>
    <relationshipName>Process_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>