force-app/main/default/objects/FEC_Process_Action__c/fields/FEC_Process_Action_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Process_Action_ID__c</fullName>
    <description>Mã Process Action</description>
    <externalId>true</externalId>
    <label>Process Action ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>