force-app/main/default/objects/FEC_Process_Action__c/fields/FEC_Process_Action_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Process_Action_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Trạng thái Process Action</description>
    <label>Process Action Status</label>
    <type>Checkbox</type>
</CustomField>