force-app/main/default/objects/FEC_Process_Action__c/fields/FEC_Process_Action_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Process_Action_Type__c</fullName>
    <description>Loại Process Action</description>
    <label>Process Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main</fullName>
            </value>
            <value>
                <fullName>Additional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>