force-app/main/default/objects/FEC_Process_Action__c/fields/FEC_Process_Action_Vietnamese_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Process_Action_Vietnamese_Name__c</fullName>
    <description>Tên tiếng Việt của Process Action</description>
    <label>Process Action Vietnamese Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>