force-app/main/default/objects/FEC_Process_Action__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FEC_Process_Action_Vietnamese_Name__c</columns>
    <columns>FEC_Process_Action_ID__c</columns>
    <columns>FEC_Process_Action_Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Process Action</label>
</ListView>